rank service added and previous endpoints modified
