# api-handler/src/routes/routes.ts
@@ -5,6 +5,7 @@ import { reseacherStatsRouter } from "./reseacherStatsRoute";
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
 import { searchRouter } from "./searchRoutes";
+import { rankRouter } from "./rankRoutes";
 
 const swaggerDocument = YAML.load("./src/api.yaml");
 
@@ -13,5 +14,6 @@ export const initializeRoutes = (app: Application) => {
   app.use("/admin/stats", adminStatsRouter.routes());
   app.use("/researcher/stats", reseacherStatsRouter.routes());
   app.use("/search", searchRouter.routes());
+  app.use("/rank", rankRouter.routes());
   app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 };
